@@ -114,6 +114,7 @@ namespace Banshee.Plugins.MiniMode
                     Globals.ActionManager["ShuffleAction"] as ToggleAction);
             shuffle_toggle_button.Relief = ReliefStyle.None;
             shuffle_toggle_button.ShowLabel = false;
+            shuffle_toggle_button.ActiveStateIndex = (bool)Globals.Configuration.Get(GConfKeys.PlaylistShuffle) ? 1 : 0;
             shuffle_toggle_button.ShowAll();
             
             MultiStateToggleButton repeat_toggle_button = new MultiStateToggleButton();
@@ -125,6 +126,7 @@ namespace Banshee.Plugins.MiniMode
                 Globals.ActionManager["RepeatSingleAction"] as ToggleAction);
             repeat_toggle_button.Relief = ReliefStyle.None;
             repeat_toggle_button.ShowLabel = false;
+            repeat_toggle_button.ActiveStateIndex = (int)Globals.Configuration.Get(GConfKeys.PlaylistRepeat);
             repeat_toggle_button.ShowAll();
             
             LowerButtonsBox.PackEnd(repeat_toggle_button, false, false, 0);
